test/part2/success/typage_pointer1-12.c
struct test{
	int x;
};

int main(){
	
	int *i;
	struct test *t;
	int *ii; 

	ii = t;
	ii - i;
}
