test/part2/fail/typage_pointer1-11.c
struct test{
	int x;
};

int main(){
	
	int *i;
	struct test *t;
	
	t - i;

}
